sass/components/activity/_multiple-choice-view.scss
input[type=checkbox] {
  &.multiple-choice-checkbox {
    margin-right: 15px;
  }
}

.mc-choices-and-feedback-container{
  display: block;
}

.multiple-choice-row-container {
  width: 100%;
}

.multiple-choice-row {
  margin: 0px;
  width: 100%;
}

.multiple-choice-flex {
  display: flex;
  .infoMediaContainer {
    margin-right: 20px;
  }
}

.multiple-choice-choices-container {
  margin-top: 10px;
}
.multiple-choice-label-remove-padding-left{
  .multiple-choice-checkbox, .multiple-choice-input-padding-right {
    margin-right: 10px;
  }
}

.multi-choice-header-mobile-margin {
  margin-left: 10px;
  margin-right: 10px;
}

.multiple-choice-alert {
  background-color: #f7f7f9;
  border-color: #e1e1e8;
  padding: 5px;
  margin-right: 10px;
  &.alert-dismissible .close {
    right: 5px;
  }
}

.multiple-choice-feedback-icon {
  margin-right: 5px;
}

.multiple-choice-alert-text {
  display: inline-flex;
  h5 {
    margin-left: 20px;
  }
  .thumbnail {
    width: 120px;
    height: 120px;
    margin: 0;
  }
}

.multiple-choice-list-group-item, .multiple-choice-checkbox {
  margin-top: -1px;
  margin-bottom: 0px;
  margin-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.multiple-choice-incorrect {
  color: red;
}

.multiple-choice-correct {
  color: green;
}

@media screen and (max-width: 767px){
  .list-group {
    .list-group-item {
      margin-right: 0px;
    }
  }
  .multiple-choice-list-group-item{
    .multiple-choice-checkbox{
      label {
        padding-left: 0px;
      }
    }
  }

  .list-group-item-mobile {
    padding-left: 10px;
    padding-right: 10px;
  }

  .multiple-choice-alert {
    margin-left: 10px;
    h5 {
      margin-left: 10px;
      margin-right: 10px;
    }
  }
}

